--- a/run.sh.example
+++ b/run.sh.example
@@ -1,30 +1,48 @@
 #!/bin/bash
 
-# 切換到腳本所在目錄
-cd /home/junting/stock-analysis
+# 配置環境變量
+export FINLAB_API_TOKEN=""
+export FUGLE_CONFIG_PATH=""
+export FUGLE_MARKET_API_KEY=""
+export FUGLE_ACCOUNT=""
+export FUGLE_ACCOUNT_PASSWORD=""
+export FUGLE_CERT_PASSWORD=""
+export PYTHON_KEYRING_BACKEND=""
 
 # 激活 miniconda 環境
 echo "Activating miniconda environment 'stock-analysis'..."
 source ~/miniconda3/etc/profile.d/conda.sh
 conda activate stock-analysis
 
+# 切換目錄
+cd /home/junting/stock-analysis/linebot
+
 # 檢查 Flask 服務器是否正在運行，如果沒有則啟動
-if ! pgrep -f "gunicorn -w 4 -b localhost:5000 webhook_handler:app" > /dev/null; then
+if ! pgrep -f "gunicorn -w 4 -b localhost:5000 app:app" > /dev/null; then
     echo "Flask server not running, starting now..."
-    nohup gunicorn -w 4 -b localhost:5000 webhook_handler:app &> flask_server.log &
-    echo "Flask server started."
+    nohup gunicorn -w 4 -b localhost:5000 app:app &> flask_server.log &
+    sleep 5  # 等待幾秒鐘以便檢查是否啟動成功
+
+    # 檢查 gunicorn 是否啟動成功
+    if pgrep -f "gunicorn -w 4 -b localhost:5000 app:app" > /dev/null; then
+        echo "Flask server started."
+    else
+        echo "Flask server failed to start."
+        echo "Deactivating conda environment..."
+        conda deactivate
+        exit 1  # 中斷腳本執行
+    fi
 else
     echo "Flask server is already running."
 fi
 
+# 切換目錄
+cd ..
+
 # 執行 Python 腳本，使用 expect 處理密碼輸入
 echo "Running Python script 'order.py'..."
-expect -c "
-spawn python order.py
-expect \"Please enter password for encrypted keyring:\"
-send "your_password\r"
-interact
-"
+python order.py
+
 
 # 退出 miniconda 環境
 echo "Deactivating conda environment..."
