--- a/run.sh.example
+++ b/run.sh.example
@@ -1,30 +1,34 @@
 #!/bin/bash
 
 # 配置環境變量
-export FINLAB_API_TOKEN=""
-export FUGLE_CONFIG_PATH=""
-export FUGLE_MARKET_API_KEY=""
-export FUGLE_ACCOUNT=""
-export FUGLE_ACCOUNT_PASSWORD=""
-export FUGLE_CERT_PASSWORD=""
-export PYTHON_KEYRING_BACKEND=""
+export FINLAB_API_TOKEN="YOUR_FINLAB_API_TOKEN"
+export FUGLE_CONFIG_PATH="YOUR_FUGLE_CONFIG_PATH"
+export FUGLE_MARKET_API_KEY="YOUR_FUGLE_MARKET_API_KEY"
+export FUGLE_ACCOUNT="YOUR_FUGLE_ACCOUNT"
+export FUGLE_ACCOUNT_PASSWORD="YOUR_FUGLE_ACCOUNT_PASSWORD"
+export FUGLE_CERT_PASSWORD="YOUR_FUGLE_CERT_PASSWORD"
+export PYTHON_KEYRING_BACKEND="keyrings.cryptfile.cryptfile.CryptFileKeyring"
 
-# 激活 miniconda 環境
+export FUND=80000
+export STRATEGY_CLASS="TibetanMastiffTWStrategy"
+export FLASK_SERVER_PORT=6000
+
+# 激活 linebot 資料夾下的 .venv 環境
 echo "Activating miniconda environment 'stock-analysis'..."
 source ~/miniconda3/etc/profile.d/conda.sh
 conda activate stock-analysis
 
-# 切換目錄
+# 切換目錄到 linebot
 cd /home/junting/stock-analysis/linebot
 
 # 檢查 Flask 服務器是否正在運行，如果沒有則啟動
-if ! pgrep -f "gunicorn -w 4 -b localhost:5000 app:app" > /dev/null; then
+if ! pgrep -f "gunicorn -w 4 -b localhost:$FLASK_SERVER_PORT app:app" > /dev/null; then
     echo "Flask server not running, starting now..."
-    nohup gunicorn -w 4 -b localhost:5000 app:app &> flask_server.log &
+    nohup gunicorn -w 4 -b localhost:$FLASK_SERVER_PORT app:app &> flask_server.log &
     sleep 5  # 等待幾秒鐘以便檢查是否啟動成功
 
     # 檢查 gunicorn 是否啟動成功
-    if pgrep -f "gunicorn -w 4 -b localhost:5000 app:app" > /dev/null; then
+    if pgrep -f "gunicorn -w 4 -b localhost:$FLASK_SERVER_PORT app:app" > /dev/null; then
         echo "Flask server started."
     else
         echo "Flask server failed to start."
@@ -36,10 +40,10 @@ else
     echo "Flask server is already running."
 fi
 
-# 切換目錄
+# 切換回專案根目錄
 cd ..
 
-# 執行 Python 腳本，使用 expect 處理密碼輸入
+# 執行 Python 腳本
 echo "Running Python script 'order.py'..."
 python order.py
 
