--- a/run_TibetanMastiffTWStrategy.sh.example
+++ b/run_TibetanMastiffTWStrategy.sh.example
@@ -9,9 +9,9 @@ export FUGLE_ACCOUNT_PASSWORD="YOUR_FUGLE_ACCOUNT_PASSWORD"
 export FUGLE_CERT_PASSWORD="YOUR_FUGLE_CERT_PASSWORD"
 export PYTHON_KEYRING_BACKEND="keyrings.cryptfile.cryptfile.CryptFileKeyring"
 
-export FUND=80000
-export STRATEGY_CLASS="TibetanMastiffTWStrategy"
-export FLASK_SERVER_PORT=5000
+FUND=80000
+STRATEGY_CLASS="TibetanMastiffTWStrategy"
+FLASK_SERVER_PORT=5000
 
 echo "Activating miniconda environment 'stock-analysis'..."
 source ~/miniconda3/etc/profile.d/conda.sh
@@ -39,12 +39,12 @@ else
     echo "Flask server is already running."
 fi
 
-# 切換回專案根目錄
+# 切換專案根目錄
 cd ..
 
 # 執行 Python 腳本
 echo "Running Python script 'order.py'..."
-python order.py
+python order.py --fund $FUND --strategy_class $STRATEGY_CLASS --flask_server_port $FLASK_SERVER_PORT --extra_bid_pct 0
 
 
 # 退出 miniconda 環境
@@ -52,3 +52,4 @@ echo "Deactivating conda environment..."
 conda deactivate
 
 echo "Script execution completed."
+
