feat: Added .bat script, added linux window conda script

--- a/run_TibetanMastiffTWStrategy.bat.example
+++ b/run_TibetanMastiffTWStrategy.bat.example
@@ -18,12 +18,12 @@ set FLASK_SERVER_PORT=5000
 REM 切換到專案根目錄
 cd /d D:\PythonProject\stock-analysis
 
-echo Activating conda environment 'stock-analysis'...
-call conda activate stock-analysis
+echo Activating conda environment 'stock-analysis-2'...
+call C:\Users\junting\anaconda3\Scripts\activate.bat stock-analysis-2
 
 echo Running Python script 'order.py'...
 python order.py --fund %FUND% --strategy_class %STRATEGY_CLASS% --flask_server_port %FLASK_SERVER_PORT% --extra_bid_pct 0
 
 echo Script execution completed.
 
-pause
+timeout /t 10 /nobreak
