--- a/environment_linux.yml
+++ b/environment_linux.yml
@@ -38,7 +38,7 @@ dependencies:
       - decorator==5.1.1
       - et-xmlfile==1.1.0
       - executing==2.1.0
-      - finlab==1.2.14
+      - finlab==1.2.15
       - flask==3.0.3
       - flask-autoindex==0.6.6
       - flask-silk==0.2
@@ -55,6 +55,7 @@ dependencies:
       - jinja2==3.1.4
       - keyring==23.5.0
       - keyrings-cryptfile==1.3.8
+      - lxml==5.3.0
       - lz4==4.3.3
       - markupsafe==2.1.5
       - matplotlib-inline==0.1.7
