feat: Prepare v3 version, upload strategy, modify order, add multiple orders, add SHIOAJI order

--- a/.gitignore
+++ b/.gitignore
@@ -10,14 +10,8 @@ logs/
 *.db
 
 # Configuration files
-config.json
-*.p12
-*.ini
-*.env
-*.yaml
-
-# User-specific files
-user_ids.json
+/config
+config.yaml
 
 # Environment and setup files
 *.sh
