Chore: 1. Define a module-level variable server, pointing to the underlying Flask application of Dash 2. Update conda yaml environment 3. shell script

--- a/.gitignore
+++ b/.gitignore
@@ -7,13 +7,15 @@ __pycache__/
 output/
 report_finlab/
 report_pickle/
-logs/
 *.db
+
+# logs
+logs/
+shioaji.log
 
 # Configuration files
 /config
 config.yaml
 
 # Environment and setup files
-*.sh
 .venv/
