--- a/environment_linux.yml
+++ b/environment_linux.yml
@@ -111,7 +111,6 @@ dependencies:
   - traitlets=5.14.3=pyhd8ed1ab_1
   - trove-classifiers=2025.3.19.19=pyhd8ed1ab_0
   - typing_extensions=4.12.2=pyha770c72_1
-  - tzdata=2025a=h04d1e81_0
   - urllib3=2.3.0=pyhd8ed1ab_0
   - wcwidth=0.2.13=pyhd8ed1ab_1
   - werkzeug=3.1.3=pyhd8ed1ab_1
@@ -128,22 +127,31 @@ dependencies:
       - base58==2.1.1
       - based58==0.1.1
       - ciso8601==2.3.2
+      - cython==3.0.12
       - filelock==3.4.1
+      - finlab==1.2.21
       - fugle-trade==1.2.0
       - fugle-trade-core==2.1.0
       - keyring==23.5.0
       - keyrings-cryptfile==1.3.8
       - loguru==0.6.0
+      - lz4==4.4.3
       - msgpack==1.1.0
       - orjson==3.10.15
+      - pandas==2.2.3
+      - pyarrow==19.0.1
       - pycryptodome==3.22.0
       - pydantic==2.10.6
       - pydantic-core==2.27.2
       - pynacl==1.5.0
       - pyrsca==0.1.2
       - pysolace==0.9.40
+      - python-dateutil==2.9.0.post0
+      - pytz==2025.1
       - sentry-sdk==1.5.12
       - shioaji==1.2.5
+      - tqdm==4.67.1
+      - tzdata==2025.1
       - websocket-client==1.8.0
       - xxhash==3.5.0
 prefix: /home/mirlab/.conda/envs/stock-analysis
