--- a/environment_linux.yml
+++ b/environment_linux.yml
@@ -130,8 +130,11 @@ dependencies:
       - cython==3.0.12
       - filelock==3.4.1
       - finlab==1.2.23
+      - flask-autoindex==0.6.6
+      - flask-silk==0.2
       - fugle-trade==1.2.0
       - fugle-trade-core==2.1.0
+      - future==1.0.0
       - keyring==23.5.0
       - keyrings-cryptfile==1.3.8
       - loguru==0.6.0
