--- a/.dockerignore
+++ b/.dockerignore
@@ -52,6 +52,9 @@ config.yaml
 # Assets (會用 volume 掛載,本地測試檔案不需要複製到 Docker)
 assets/
 
+# FinLab 資料目錄 (會用 volume 掛載)
+finlab_db/
+
 # Conda 環境 (會在 Dockerfile 中建立)
 environment_window.yml
 
