--- a/environment_linux.yml
+++ b/environment_linux.yml
@@ -144,6 +144,10 @@ dependencies:
       - flask-autoindex==0.6.6
       - fugle-trade==1.2.0
       - fugle-trade-core==2.1.0
+      - google-api-python-client==2.188.0
+      - google-auth-oauthlib==1.2.4
+      - google-auth-httplib2==0.3.0
+      - google.genai==1.59.0
       - keyring==23.5.0
       - keyrings-cryptfile==1.3.8
       - loguru==0.6.0
