chore: restructure sensitive configuration to .env and improve setup documentation
This commit implements a comprehensive three-layer configuration architecture to improve security and maintainability:

**Configuration Architecture (3 Layers):**
- Layer 1: .env (actual sensitive values - in .gitignore, never committed)
- Layer 2: config.yaml (template with ${VAR_NAME} references - safe to commit)
- Layer 3: ConfigLoader (automatic variable resolution at runtime)

**Changes:**
1. **Enhanced ConfigLoader (utils/config_loader.py)**
   - Added load_dotenv() to load .env file on initialization
   - Added _resolve_env_vars() method to resolve ${VAR_NAME} patterns
   - Implements proper precedence: .env values override config.yaml defaults

2. **Configuration Files**
   - Created .env.example with complete template and helpful documentation
   - Updated both config.yaml files (root and /config/) with ${VAR_NAME} references
   - Added complete broker configurations (Shioaji, Fugle) with all required env vars
   - Removed empty google_drive section (no longer needed)

3. **Docker Integration**
   - Updated docker-compose.yml to mount .env as read-only to both services
   - Services automatically load .env when ConfigLoader initializes

4. **Code Fixes**
   - Fixed jobs/drive_fetcher.py to use ConfigLoader instead of direct os.getenv()
   - All jobs now use consistent ConfigLoader for configuration access

5. **Documentation (DOCKER_SETUP.md)**
   - Added ⚙️ Configuration Architecture section with visual flow diagram
   - Updated setup steps to focus on .env file (copy .env.example → .env)
   - Explained three-layer system and security benefits
   - Updated Volume Mounts section to include .env
   - Simplified examples to reference actual files instead of code duplication
   - Added parameter source clarification for scheduled jobs

**Security Benefits:**
✓ API keys and credentials never tracked in git
✓ Single .env file controls all sensitive configuration
✓ Same config.yaml

--- a/.gitignore
+++ b/.gitignore
@@ -19,14 +19,17 @@ backtest.log
 fetch.log
 order.log
 
-# Configuration files
-/config
-config.yaml
+# env and credential files
+.env
+credentials/
 
 # Environment and setup files
 .venv/
 
 finlab_db
-data/
 
+# MacOS system files
 .DS_Store
+
+# VSCode settings
+.vscode/
