--- a/environment.yml
+++ b/environment.yml
@@ -3,174 +3,31 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
-  - asttokens=3.0.0=pyhd8ed1ab_1
-  - backports=1.0=pyhd8ed1ab_5
-  - backports.tarfile=1.2.0=pyhd8ed1ab_1
-  - blas=2.131=openblas
-  - blas-devel=3.9.0=31_h1ea3ea9_openblas
-  - blinker=1.9.0=pyhff2d567_0
-  - bottleneck=1.3.4=py310hde88566_1
-  - brotli-python=1.0.9=py310hd8f1fbe_7
-  - bzip2=1.0.8=h5eee18b_6
-  - ca-certificates=2025.4.26=hbd8a1cb_0
-  - certifi=2025.4.26=pyhd8ed1ab_0
-  - charset-normalizer=3.4.2=pyhd8ed1ab_0
-  - click=8.2.1=pyh707e725_0
-  - dash=3.0.4=pyhd8ed1ab_0
-  - dash-bootstrap-components=2.0.3=pyhd8ed1ab_0
-  - dbus=1.13.6=h5008d03_3
-  - decorator=5.2.1=pyhd8ed1ab_0
-  - editables=0.5=pyhd8ed1ab_1
-  - et_xmlfile=2.0.0=pyhd8ed1ab_1
-  - exceptiongroup=1.3.0=pyhd8ed1ab_0
-  - executing=2.2.0=pyhd8ed1ab_0
-  - expat=2.4.8=h27087fc_0
-  - flask=3.1.1=pyhd8ed1ab_0
-  - flask-silk=0.2=py_0
-  - future=1.0.0=pyhd8ed1ab_2
-  - gunicorn=23.0.0=py310h06a4308_0
-  - h2=4.2.0=pyhd8ed1ab_0
-  - hatchling=1.27.0=pypyhd8ed1ab_0
-  - hpack=4.1.0=pyhd8ed1ab_0
-  - hyperframe=6.1.0=pyhd8ed1ab_0
-  - icu=68.2=h9c3ff4c_0
-  - idna=3.10=pyhd8ed1ab_1
-  - importlib-metadata=8.7.0=pyhe01879c_1
-  - importlib_resources=6.5.2=pyhd8ed1ab_0
-  - ipython=8.37.0=pyh8f84b5b_0
-  - itsdangerous=2.2.0=pyhd8ed1ab_1
-  - jaraco.classes=3.4.0=pyhd8ed1ab_2
-  - jaraco.context=6.0.1=pyhd8ed1ab_0
-  - jaraco.functools=4.1.0=pyhd8ed1ab_0
-  - jedi=0.19.2=pyhd8ed1ab_1
-  - jeepney=0.9.0=pyhd8ed1ab_0
-  - jinja2=3.1.6=pyhd8ed1ab_0
-  - ld_impl_linux-64=2.40=h12ee557_0
-  - libblas=3.9.0=31_h59b9bed_openblas
-  - libcblas=3.9.0=31_he106b2a_openblas
-  - libffi=3.4.4=h6a678d5_1
-  - libgcc-ng=11.2.0=h1234567_1
-  - libgfortran-ng=13.2.0=h69a702a_0
-  - libgfortran5=13.2.0=ha4646dd_0
-  - libglib=2.78.4=hdc74915_0
-  - libgomp=11.2.0=h1234567_1
-  - libiconv=1.17=h166bdaf_0
-  - liblapack=3.9.0=31_h7ac8fdf_openblas
-  - liblapacke=3.9.0=31_he2f377e_openblas
-  - libopenblas=0.3.29=ha39b09d_0
-  - libstdcxx-ng=13.2.0=hc0a3c3a_7
-  - libta-lib=0.4.0=h516909a_0
-  - libuuid=1.41.5=h5eee18b_0
-  - libxcb=1.17.0=h9b100fa_0
-  - libxml2=2.9.10=h72842e0_4
-  - libxslt=1.1.33=h15afd5d_2
-  - lxml=4.8.0=py310h5764c6d_3
-  - lz4-c=1.9.4=h6a678d5_1
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_1
-  - more-itertools=10.7.0=pyhd8ed1ab_0
-  - narwhals=1.42.1=pyhe01879c_0
-  - ncurses=6.4=h6a678d5_0
-  - nest-asyncio=1.6.0=pyhd8ed1ab_1
-  - nomkl=3.0=0
-  - numexpr=2.8.0=py310hf05e7a9_102
-  - numpy=1.26.4=py310heeff2f4_0
-  - numpy-base=1.26.4=py310h8a23956_0
-  - openblas=0.3.29=h06a4308_0
-  - openblas-devel=0.3.29=ha39b09d_0
-  - openpyxl=3.0.9=pyhd8ed1ab_0
-  - openssl=3.0.16=h5eee18b_0
-  - packaging=25.0=pyh29332c3_1
-  - pandas=2.0.3=py310h1128e8f_0
-  - pathspec=0.12.1=pyhd8ed1ab_1
-  - pcre2=10.42=hebb0a14_1
-  - pexpect=4.9.0=pyhd8ed1ab_1
-  - pickleshare=0.7.5=pyhd8ed1ab_1004
-  - pip=25.1=pyhc872135_2
-  - plotly=6.1.2=pyhd8ed1ab_0
-  - pluggy=1.6.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.51=pyha770c72_0
-  - pthread-stubs=0.3=h0ce48e5_1
-  - ptyprocess=0.7.0=pyhd8ed1ab_1
-  - pure_eval=0.2.3=pyhd8ed1ab_1
-  - pycparser=2.22=pyh29332c3_1
-  - pygments=2.19.1=pyhd8ed1ab_0
-  - pysocks=1.7.1=pyha55dd90_7
-  - python=3.10.16=he870216_1
-  - python-tzdata=2025.2=pyhd8ed1ab_0
-  - python_abi=3.10=2_cp310
-  - pyyaml=6.0=py310h5764c6d_4
-  - readline=8.2=h5eee18b_0
-  - requests=2.32.4=pyhd8ed1ab_0
-  - retrying=1.3.4=pyhd8ed1ab_0
-  - secretstorage=3.3.3=py310hff52083_3
-  - setuptools=78.1.1=py310h06a4308_0
-  - sqlite=3.45.3=h5eee18b_0
-  - stack_data=0.6.3=pyhd8ed1ab_1
-  - ta-lib=0.4.19=py310h96516ba_3
-  - tk=8.6.14=h993c535_1
-  - tomli=2.2.1=pyhd8ed1ab_1
-  - traitlets=5.14.3=pyhd8ed1ab_1
-  - trove-classifiers=2025.5.9.12=pyhd8ed1ab_0
-  - typing_extensions=4.14.0=pyhe01879c_0
-  - tzdata=2025b=h04d1e81_0
-  - urllib3=2.4.0=pyhd8ed1ab_0
-  - wcwidth=0.2.13=pyhd8ed1ab_1
-  - werkzeug=3.1.3=pyhd8ed1ab_1
-  - wheel=0.45.1=py310h06a4308_0
-  - xorg-libx11=1.8.12=h9b100fa_1
-  - xorg-libxau=1.0.12=h9b100fa_0
-  - xorg-libxdmcp=1.1.5=h9b100fa_0
-  - xorg-xorgproto=2024.1=h5eee18b_1
-  - xz=5.6.4=h5eee18b_1
-  - yaml=0.2.5=h7f98852_2
-  - zipp=3.23.0=pyhd8ed1ab_0
-  - zlib=1.2.13=h5eee18b_1
-  - zstandard=0.23.0=py310h2c38b39_1
-  - zstd=1.5.6=hc292b87_0
+  - python=3.10
+  - pandas=2.0.3
+  - numpy=1.26.4
+  - flask=3.1.1
+  - dash=3.0.4
+  - dash-bootstrap-components=2.0.3
+  - gunicorn=23.0.0
+  - plotly=6.1.2
+  - ta-lib
+  - openpyxl
+  - lxml
+  - pip
   - pip:
-      - annotated-types==0.7.0
-      - argon2-cffi==25.1.0
-      - argon2-cffi-bindings==21.2.0
-      - base58==2.1.1
-      - based58==0.1.1
-      - cffi==1.17.1
-      - ciso8601==2.3.2
-      - cryptography==45.0.4
-      - cython==3.1.2
-      - filelock==3.4.1
       - finlab==1.3.0
-      - flask-autoindex==0.6.6
+      - shioaji==1.2.5
       - fugle-trade==1.2.0
-      - fugle-trade-core==2.1.0
+      - google.genai==1.59.0
+      - pydantic==2.11.6
+      - python-dotenv
+      - loguru==0.6.0
+      - tqdm
+      - PyYAML
       - google-api-python-client==2.188.0
       - google-auth-oauthlib==1.2.4
       - google-auth-httplib2==0.3.0
       - google.genai==1.59.0
+      - flask-autoindex==0.6.6
       - keyring==23.5.0
-      - keyrings-cryptfile==1.3.8
-      - loguru==0.6.0
-      - lz4==4.4.4
-      - markupsafe==3.0.2
-      - msgpack==1.1.1
-      - orjson==3.10.18
-      - parso==0.8.4
-      - pyarrow==20.0.0
-      - pycryptodome==3.23.0
-      - pydantic==2.11.6
-      - pydantic-core==2.33.2
-      - pynacl==1.5.0
-      - pyrsca==0.1.2
-      - pysolace==0.9.40
-      - python-dateutil==2.9.0.post0
-      - python-dotenv
-      - pytz==2025.2
-      - sentry-sdk==1.5.12
-      - shioaji==1.2.5
-      - six==1.17.0
-      - tqdm==4.67.1
-      - typing-inspection==0.4.1
-      - websocket-client==1.8.0
-      - xxhash==3.5.0
-prefix: /home/junting/miniconda3/envs/stock-analysis
