--- a/config/config.yaml
+++ b/config/config.yaml
@@ -13,16 +13,12 @@ llm_settings:
   model_name: "gemini-2.0-flash"
   api_rate_limit_sleep: 30
   max_retries: 3
-  prompt_file_path: "/app/config/prompts/golden_ai_top5_prompt.txt"
+  prompt_file_path: "./config/prompts/golden_ai_parsing_prompt.txt"
 
-# Telegram 通知 (暫時禁用)
+# Telegram 通知 
 notification:
-  enabled: false
-  telegram:
-    bot_token: ""
-    chat_id: ""
+  enabled: true
 
-# 使用者配置
 users:
   junting:
     shioaji:
@@ -46,12 +42,11 @@ users:
         rebalance_safety_weight: 0.3
         strategy_class_name: "AlanTWStrategyACE"
 
-# 股票推薦清單配置 (drive_folder_id 設定在 .env)
 recommendation_tasks:
   weekly:
     drive_folder_id: "${WEEKLY_DRIVE_FOLDER_ID}"
-    local_dir: "/app/assets/recommendations_w"
+    local_dir: "./assets/recommendations_w"
   
   monthly:
     drive_folder_id: "${MONTHLY_DRIVE_FOLDER_ID}"
-    local_dir: "/app/assets/recommendations_m"
+    local_dir: "./assets/recommendations_m"
